<resources>
    <string name="app_name">PokedexApp</string>
    <string name="pokemon_number_pattern">#%d</string>
    <string name="pokemon_height_pattern">%.2f m</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="pokemon">Pokémon</string>
    <string name="favorites">Meus favoritos</string>
    <string name="image_of_a_pokemon">Image of a Pokémon</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="number">Number</string>
    <string name="type">Type</string>
    <string name="experience">Experience</string>
    <string name="height">Height</string>
    <string name="rarity">Rarity</string>
    <string name="change_view_list">Change view list</string>
    <string name="back_to_previous_screen">Back to previous screen</string>
    <string name="go_back_icon">Left arrow button to go back to previous page</string>
    <string name="pokemon_logo_banner">Pokémon logo banner</string>
    <string name="list_layout_icon">Button to change the layout displayed</string>
    <string name="db_filename">favPokémonsDB</string>
</resources>
