<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/pokemon_details_layout"
        android:orientation="vertical"
        android:background="@color/colorBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/toolbar_details">

        <ImageButton
                android:id="@+id/pokemon_details_toolbar_action_back"
                android:contentDescription="@string/go_back_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_back"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:tint="@android:color/white"/>

        <TextView
                android:id="@+id/pokemon_details_toolbar_name"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:fontFamily="@font/font_roboto"
                android:layout_marginStart="72dp"
                android:textSize="28sp"
                tools:text="Bulbasaur"/>

        <ImageButton
                android:id="@+id/pokemon_details_toolbar_favorite"
                android:contentDescription="@string/favorite_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_favorite_border"
                android:background="@android:color/transparent"
                android:tint="@android:color/white"/>
    </Toolbar>

    <ProgressBar
            style="?android:progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/details_progress_bar"
            android:progressBackgroundTint="@color/colorBackgroundImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
            android:layout_width="422dp"
            android:layout_height="422dp"
            android:id="@+id/pokemon_details_image"
            android:contentDescription="@string/image_of_a_pokemon"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="232dp"/>

    <androidx.cardview.widget.CardView
            android:id="@+id/pokemon_details_cardview"
            android:layout_width="328dp"
            android:layout_height="176dp"
            app:cardCornerRadius="10dp"
            android:layout_marginBottom="144dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/number"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:fontFamily="@font/font_roboto"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorItemTextLight"
                    android:id="@+id/pokemon_details_number_title"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"/>

            <TextView
                    android:text="@string/type"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:fontFamily="@font/font_roboto"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorItemTextLight"
                    android:id="@+id/pokemon_details_type_title"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_details_number_title"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"/>

            <TextView
                    android:text="@string/experience"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:fontFamily="@font/font_roboto"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorItemTextLight"
                    android:id="@+id/pokemon_details_experience_title"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_details_type_title"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"/>

            <TextView
                    android:text="@string/height"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:fontFamily="@font/font_roboto"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorItemTextLight"
                    android:id="@+id/pokemon_details_height_title"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_details_experience_title"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:fontFamily="@font/font_roboto"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorItemTextDark"
                    android:id="@+id/pokemon_details_number"
                    app:layout_constraintTop_toTopOf="@id/pokemon_details_number_title"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="164dp"
                    tools:text="#001"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:fontFamily="@font/font_roboto"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorItemTextDark"
                    android:id="@+id/pokemon_details_type"
                    app:layout_constraintTop_toTopOf="@id/pokemon_details_type_title"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="164dp"
                    tools:text="Grass/Poison"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:fontFamily="@font/font_roboto"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorItemTextDark"
                    android:id="@+id/pokemon_details_experience"
                    app:layout_constraintTop_toTopOf="@id/pokemon_details_experience_title"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="164dp"
                    tools:text="101"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:fontFamily="@font/font_roboto"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorItemTextDark"
                    android:id="@+id/pokemon_details_height"
                    app:layout_constraintTop_toTopOf="@id/pokemon_details_height_title"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="164dp"
                    tools:text="0.7 m"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>